--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap 4 Website Example</title>
+  <title>The Magic of Pho</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -18,25 +18,25 @@
 <body>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>My First Bootstrap 4 Page</h1>
-  <p>Resize this responsive page to see the effect!</p> 
+  <h1>The Magic of Pho</h1>
+  <p>A Symphony of Flavor and Texture</p> 
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Recipes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Ingredients</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Contact</a>
       </li>    
     </ul>
   </div>  
@@ -45,41 +45,48 @@
 <div class="container" style="margin-top:30px">
   <div class="row">
     <div class="col-sm-4">
-      <h2>About Me</h2>
-      <h5>Photo of me:</h5>
+      <h2>Why I Love Pho</h2>
+      <h5>Besides the fact that it's delicious.</h5>
       <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
+      <p>Born and bred in the Bay Area, I feel lucky to live in a place with such a rich and diverse culinary landscape. One of my earliest memories of non-Chinese or American food is Vietnamese Pho. I must have been about 3 or 4 years old, watching my mom portioning out some noodles and broth from her big bowl into a little rice bowl for me. </p>
+      <p>This seemingly simple, highly nuanced dish holds a special place in my heart. Whether I was drowning my sorrows after a rough exam, enjoying a quiet lunch alone in the middle of a busy workday, or staying out late with friends, the combination of silky rice noodles, richly aromatic broth, and fresh herbs has always transported me to a cozier and calmer state. </p>
+      <h3>Articles</h3>
+      <p>By experts who know way more than me!</p>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
+          <a class="nav-link active" href=https://vietnam.travel/things-to-do/history-pho?utm_source=dynamic_sem&utm_medium=cpc&utm_campaign=nghia_rsvp&gclid=Cj0KCQiAip-PBhDVARIsAPP2xc19xrtd2lMyXSsFQ0H_Uy0n49bhXva_IX1qv5Gp-JLpsAbdOuIoQBYaAthpEALw_wcB>The Story of Vietnamese Pho</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href=https://medium.com/@asianinspirations.au/the-great-pho-debate-northern-versus-southern-pho-cbab51758a25>The Great Pho Debate</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href=https://medium.com/invironment/the-many-faces-of-pho-2b778ed04c7d>The Many Faces of Pho</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
+        
       </ul>
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
+      <h2>A Brief History of Pho</h2>
+      <h5>From Vietnamese National Dish to Bay Area Favorite</h5>
       <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p>Pho originated in Nam Định province, located in northern Vietnam. Historians believe that the dish evolved from existing noodle dishes in the area, but speculate that the incorporation of beef in the recipe was a result of French colonial influence. It is thought that the word “pho” may be linked to the French “pot a feu”, which also involves beef and a clear broth made from beef bones</p>
+      <p>Following the partition of Vietnam after World War II, many northern Vietnamese people fled to the south, bringing pho with them. This led to the development of two distinct styles of pho– the northern style (Pho Bac) and the southern style (Pho Nam). Following the Vietnam War, southern Vietnamese refugees fled to America, bringing their culture and recipes with them. </p>
       <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
+      <h2>Regional Styles of Pho</h2>
+      <h5>The North & South Divergence</h5>
       <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p>Unsurprisingly, southern style pho, Pho Nam, is probably the most prevalent in the United States. It tends to have a sweeter flavor. Chicken or dried seafood in addition to beef bones in the broth. The southern style also uses skinnier noodles. Fresh basil leaves, bean sprouts, limes, peppers, and condiments such as hoisin and sriracha sauce are offered on the side so you can customize the flavor to your taste. </p>
+      <p>In contrast, the northern style, Pho Bac, features a more simple and savory broth, as only beef bones are used. This style features wider, flatter noodles. Pho Bac may feature sliced onions and green onions, but otherwise does not include extra vegetables and condiments. </p>
+      <br>
+      <h2>Regional Styles of Pho</h2>
+      <h5>The North & South Divergence</h5>
+      <div class="fakeimg">Fake Image</div>
+      <p>Unsurprisingly, southern style pho, Pho Nam, is probably the most prevalent in the United States. It tends to have a sweeter flavor. Chicken or dried seafood in addition to beef bones in the broth. The southern style also uses skinnier noodles. Fresh basil leaves, bean sprouts, limes, peppers, and condiments such as hoisin and sriracha sauce are offered on the side so you can customize the flavor to your taste. </p>
+      <p>In contrast, the northern style, Pho Bac, features a more simple and savory broth, as only beef bones are used. This style features wider, flatter noodles. Pho Bac may feature sliced onions and green onions, but otherwise does not include extra vegetables and condiments. </p>
+      <br>
     </div>
+
   </div>
 </div>
 
