--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
-  
-  </style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6WVNVTE2NK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6WVNVTE2NK');
+</script>
 </head>
 <body>
 
@@ -143,9 +149,6 @@
   </div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  background-image: 
-    ba
-  </background-image>
   
   <p>Footer</p>
 </div>
